# serializer version: 1
# name: test_find
  dict({
    'documents': list([
      dict({
        'cluster': 3463,
        'count': 4,
        'families': dict({
          'Baculoviridae': 3,
        }),
        'id': 'f8666902',
        'names': list([
          'ORF-63',
          'ORF67',
          'hypothetical protein',
        ]),
      }),
    ]),
    'found_count': 1,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'status': dict({
      'errors': list([
      ]),
      'installed': dict({
        'body': "- remove some annotations that didn't have corresponding profiles",
        'created_at': '2015-10-06T20:00:00Z',
        'filename': 'vthmm.tar.gz',
        'html_url': 'https://github.com/virtool/virtool-hmm/releases/tag/v0.2.1',
        'id': 8472569,
        'name': 'v0.2.1',
        'newer': True,
        'published_at': '2017-11-10T19:12:43Z',
        'ready': True,
        'size': 85904451,
        'user': dict({
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        }),
      }),
      'release': dict({
        'body': "- remove some annotations that didn't have corresponding profiles",
        'content_type': 'application/gzip',
        'download_url': 'https://github.com/virtool/virtool-hmm/releases/download/v0.2.1/vthmm.tar.gz',
        'etag': 'W/"7bd9cdef79c82ab4d7e5cfff394cf81eaddc6f681b8202f2a7bdc65cbcc4aaea"',
        'filename': 'vthmm.tar.gz',
        'html_url': 'https://github.com/virtool/virtool-hmm/releases/tag/v0.2.1',
        'id': 1230982,
        'name': 'v0.2.1',
        'newer': False,
        'published_at': '2015-10-06T20:00:00Z',
        'retrieved_at': '2015-10-06T20:00:00Z',
        'size': 85904451,
      }),
      'task': None,
      'updating': False,
    }),
    'total_count': 1,
  })
# ---
# name: test_get[None][json]
  dict({
    'cluster': 3463,
    'count': 4,
    'entries': list([
      dict({
        'accession': 'YP_007250520.1',
        'gi': '438000415',
        'name': 'hypothetical protein',
        'organism': 'Thysanoplusia orichalcea nucleopolyhedrovirus',
      }),
      dict({
        'accession': 'YP_758364.1',
        'gi': '114679914',
        'name': 'ORF67',
        'organism': 'Leucania separata nucleopolyhedrovirus',
      }),
      dict({
        'accession': 'YP_002268099.1',
        'gi': '209170953',
        'name': 'agip69',
        'organism': 'Agrotis ipsilon multiple nucleopolyhedrovirus',
      }),
      dict({
        'accession': 'YP_529733.1',
        'gi': '90592780',
        'name': 'ORF-63',
        'organism': 'Agrotis segetum nucleopolyhedrovirus',
      }),
    ]),
    'families': dict({
      'Baculoviridae': 3,
    }),
    'genera': dict({
      'Alphabaculovirus': 3,
    }),
    'id': 'f8666902',
    'length': 199,
    'mean_entropy': 0.51,
    'names': list([
      'ORF-63',
      'ORF67',
      'hypothetical protein',
    ]),
    'total_entropy': 101.49,
  })
# ---
# name: test_get_release[json]
  dict({
    'body': "- remove some annotations that didn't have corresponding profiles",
    'content_type': 'application/gzip',
    'download_url': 'https://github.com/virtool/virtool-hmm/releases/download/v0.2.1/vthmm.tar.gz',
    'etag': 'W/"7bd9cdef79c82ab4d7e5cfff394cf81eaddc6f681b8202f2a7bdc65cbcc4aaea"',
    'filename': 'vthmm.tar.gz',
    'html_url': 'https://github.com/virtool/virtool-hmm/releases/tag/v0.2.1',
    'id': 1230982,
    'name': 'v0.2.1',
    'newer': False,
    'published_at': '2015-10-06T20:00:00Z',
    'retrieved_at': '2015-10-06T20:00:00Z',
    'size': 85904451,
  })
# ---
# name: test_get_status[json]
  dict({
    'errors': list([
    ]),
    'installed': dict({
      'body': "- remove some annotations that didn't have corresponding profiles",
      'created_at': '2015-10-06T20:00:00Z',
      'filename': 'vthmm.tar.gz',
      'html_url': 'https://github.com/virtool/virtool-hmm/releases/tag/v0.2.1',
      'id': 8472569,
      'name': 'v0.2.1',
      'newer': True,
      'published_at': '2017-11-10T19:12:43Z',
      'ready': True,
      'size': 85904451,
      'user': dict({
        'administrator': False,
        'handle': 'leeashley',
        'id': 'bf1b993c',
      }),
    }),
    'release': dict({
      'body': "- remove some annotations that didn't have corresponding profiles",
      'content_type': 'application/gzip',
      'download_url': 'https://github.com/virtool/virtool-hmm/releases/download/v0.2.1/vthmm.tar.gz',
      'etag': 'W/"7bd9cdef79c82ab4d7e5cfff394cf81eaddc6f681b8202f2a7bdc65cbcc4aaea"',
      'filename': 'vthmm.tar.gz',
      'html_url': 'https://github.com/virtool/virtool-hmm/releases/tag/v0.2.1',
      'id': 1230982,
      'name': 'v0.2.1',
      'newer': False,
      'published_at': '2015-10-06T20:00:00Z',
      'retrieved_at': '2015-10-06T20:00:00Z',
      'size': 85904451,
    }),
    'task': None,
    'updating': False,
  })
# ---
